// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedFieldList FieldItemButton renders properly 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists"
>
  <button
    aria-label="Preview bytes: number"
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-bytes-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        />
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-bytes"
          title="bytes"
        >
          <mark
            class="euiMark emotion-euiMark-hasScreenReaderHelpText"
          >
            by
          </mark>
          tes
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for Records (Lens field) 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s kbnFieldButton-isActive unifiedFieldListItemButton unifiedFieldListItemButton--document unifiedFieldListItemButton--exists"
>
  <button
    aria-label="Preview Records: document"
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-___records___-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
          >
            <span
              data-euiicon-type="tokenNumber"
              title="Records"
            >
              Records
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-___records___"
          title="Records"
        >
          <mark
            class="euiMark emotion-euiMark-hasScreenReaderHelpText"
          >
            Re
          </mark>
          cords
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for search with spaces 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--date unifiedFieldListItemButton--exists"
>
  <div
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-script date-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
          >
            <span
              data-euiicon-type="tokenDate"
              title="Date"
            >
              Date
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-script date"
          title="script date"
        >
          <mark
            class="euiMark emotion-euiMark-hasScreenReaderHelpText"
          >
            script date
          </mark>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for text-based column field 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--string unifiedFieldListItemButton--exists"
>
  <div
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-agent-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis2"
          >
            <span
              data-euiicon-type="tokenString"
              title="String"
            >
              String
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-agent"
          title="agent"
        >
          <mark
            class="euiMark emotion-euiMark-hasScreenReaderHelpText"
          >
            ag
          </mark>
          ent
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for wildcard search 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--date unifiedFieldListItemButton--exists"
>
  <div
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-script date-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
          >
            <span
              data-euiicon-type="tokenDate"
              title="Date"
            >
              Date
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-script date"
          title="script date"
        >
          <mark
            class="euiMark emotion-euiMark-hasScreenReaderHelpText"
          >
            script date
          </mark>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly when a conflict field 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s kbnFieldButton-isActive unifiedFieldListItemButton unifiedFieldListItemButton--conflict unifiedFieldListItemButton--exists"
>
  <button
    aria-label="Preview custom_user_field: conflict"
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-custom_user_field-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis9"
          >
            <span
              data-euiicon-type="warning"
              title="Conflict"
            >
              Conflict
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-custom_user_field"
          title="custom_user_field"
        >
          custom_user_field
        </span>
      </span>
    </span>
    <div
      class="kbnFieldButton__infoIcon"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <span
          data-euiicon-type="warning"
          tabindex="0"
        />
      </span>
    </div>
  </button>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly when empty 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--date unifiedFieldListItemButton--missing"
>
  <button
    aria-label="Preview script date: date"
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-script date-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
          >
            <span
              data-euiicon-type="tokenDate"
              title="Date"
            >
              Date
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-script date"
          title="script date"
        >
          script date
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly with a drag icon 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--xs unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists custom"
>
  <div
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-bytes-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
          >
            <span
              data-euiicon-type="tokenNumber"
              title="Number"
            >
              Number
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-bytes"
          title="bytes"
        >
          bytes
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly with an action when deselected 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists"
>
  <button
    aria-label="Preview bytes: number"
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-bytes-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
          >
            <span
              data-euiicon-type="tokenNumber"
              title="Number"
            >
              Number
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-bytes"
          title="bytes"
        >
          bytes
        </span>
      </span>
    </span>
  </button>
  <div
    class="kbnFieldButton__fieldAction"
  >
    <span
      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
    >
      <button
        aria-label="Add \\"bytes\\" field"
        class="euiButtonIcon unifiedFieldListItemButton__action emotion-euiButtonIcon-xs-empty-text"
        data-test-subj="fieldToggle-bytes"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="plusInCircle"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly with an action when selected 1`] = `
<div
  class="kbnFieldButton kbnFieldButton--s unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists"
>
  <button
    aria-label="Preview bytes: number"
    class="kbn-resetFocusState kbnFieldButton__button"
    data-test-subj="field-bytes-showDetails"
  >
    <span
      class="kbnFieldButton__fieldIcon"
    >
      <div
        class="unifiedFieldListItemButton__fieldIconContainer"
      >
        <div
          class="unifiedFieldListItemButton__fieldIcon"
        >
          <span
            class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
          >
            <span
              data-euiicon-type="tokenNumber"
              title="Number"
            >
              Number
            </span>
          </span>
        </div>
      </div>
    </span>
    <span
      class="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        class="kbnFieldButton__nameInner"
      >
        <span
          data-test-subj="field-bytes"
          title="bytes"
        >
          bytes
        </span>
      </span>
    </span>
  </button>
  <div
    class="kbnFieldButton__fieldAction"
  >
    <span
      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
    >
      <button
        aria-label="Remove \\"bytes\\" field"
        class="euiButtonIcon unifiedFieldListItemButton__action emotion-euiButtonIcon-xs-empty-danger"
        data-test-subj="fieldToggle-bytes"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
    </span>
  </div>
</div>
`;
